adding docs and cleanup build