@@ -2,14 +2,14 @@ package io.spring.file;
 
 import io.spring.file.watch.event.domain.FileRecord;
 import org.apache.geode.cache.GemFireCache;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.data.gemfire.DiskStoreFactoryBean;
 import org.springframework.data.gemfire.PartitionedRegionFactoryBean;
-import org.springframework.data.gemfire.config.annotation.CacheServerApplication;
-import org.springframework.data.gemfire.config.annotation.EnableDiskStore;
-import org.springframework.data.gemfire.config.annotation.EnableDiskStores;
-import org.springframework.data.gemfire.config.annotation.EnablePdx;
+import org.springframework.data.gemfire.config.annotation.*;
 
+import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -25,6 +25,8 @@ import java.util.Map;
  *
  * - gemfire.work.dir = the GemFire working directory for persistence
  *
+ *  --add-exports  java.management/com.sun.jmx.remote.security=ALL-UNNAMED
+ * java.management
  * @author gregory green
  */
 @Configuration
@@ -32,8 +34,9 @@ import java.util.Map;
 @EnablePdx(persistent = true, diskStoreName = "PDX-DS")
 @EnableDiskStores(
         diskStores = {
-                @EnableDiskStore(name = "PDX-DS", maxOplogSize = 212, diskDirectories = @EnableDiskStore.DiskDirectory(location = "${gemfire.work.dir}")),
-                @EnableDiskStore(name = "FILE-DS", maxOplogSize = 512, diskDirectories = @EnableDiskStore.DiskDirectory(location = "${gemfire.work.dir}"))
+//                @EnableDiskStore(name = "DEFAULT", maxOplogSize = 212, diskDirectories = @EnableDiskStore.DiskDirectory(location = "${spring.data.gemfire.disk.store.directory.location}")),
+                @EnableDiskStore(name = "PDX-DS", maxOplogSize = 212, diskDirectories = @EnableDiskStore.DiskDirectory(location = "${spring.data.gemfire.disk.store.directory.location}")),
+                @EnableDiskStore(name = "FILE-DS", maxOplogSize = 512, diskDirectories = @EnableDiskStore.DiskDirectory(location = "${spring.data.gemfire.disk.store.directory.location}"))
         }
 )
 public class GemFireConfig {
@@ -47,6 +50,15 @@ public class GemFireConfig {
         fileRegion.setCache(gemfireCache);
         fileRegion.setPersistent(true);
         return fileRegion;
+    }
+
+    @Bean
+    DiskStoreConfigurer diskStoreConfigurer(
+            @Value("${spring.data.gemfire.disk.store.directory.location}") String location) {
+
+        return (beanName, diskStoreFactoryBean) -> {
+                diskStoreFactoryBean.setDiskDirs(Collections.singletonList(new DiskStoreFactoryBean.DiskDir(location)));
+        };
     }
 
     @Bean
